стены ограничиваются уровнем, который указывает пользователь

--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -48,6 +48,7 @@
         <div class="btn-group">
           <button id="none" type="button" class="btn btn-light">Выбирать</button>
           <button id="draw" type="button" class="btn btn-light">Рисовать</button>
+          <button id="limitation" type="button" class="btn btn-light">Ограничить</button>
         </div>
       </div>
 
@@ -65,6 +66,7 @@
             <button id="door_window" type="button" class="btn btn-light">Дверь + окно</button>
             <button id="opening" type="button" class="btn btn-light">Проем</button>
             <button id="vent" type="button" class="btn btn-light">Вентканал</button>
+            <!-- <button id="plate_contour" type="button" class="btn btn-light">Контур перекрытия</button> -->
           </p>
         </div>
       </div>
