--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -56,10 +56,10 @@
 
   <ul class="sidebar-nav">
     {% if user.is_authenticated %}
-    <li><a href="{% url 'plans' %}">Мои проекты</a></li>
-    <li><a href="">Мои цены на материалы</a></li>
+    <!-- <li><a href="{% url 'plans' %}">Мои проекты</a></li>
+    <li><a href="">Мои цены на материалы</a></li> -->
     <!--  url 'my-wall-materials-prices'  -->
-    <li><a href="">Мои цены на работы/услуги</a></li>
+    <!-- <li><a href="">Мои цены на работы/услуги</a></li> -->
     <!--  url 'my-work-prices'  -->
 
 
