--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,11 +1,12 @@
 {% extends "base_generic.html" %}
-{% block title %}Create an account{% endblock %}
+
 {% block content %}
-<h1>Create an account</h1>
-<p>Please, sign up using the following form:</p>
+<h1>Регистрация</h1>
+
 <form action="." method="post">
     {{ user_form.as_p }}
+    {{ profile_form.as_p }}
     {% csrf_token %}
-    <p><input type="submit" value="Create my account"></p>
+    <p><input type="submit" value="ОК"></p>
 </form>
 {% endblock %}
