--- a/account/templates/account/register_done.html
+++ b/account/templates/account/register_done.html
@@ -1,7 +1,6 @@
 {% extends "base_generic.html" %}
-{% block title %}Welcome{% endblock %}
+{% block title %}Добро пожаловать{% endblock %}
 {% block content %}
-<h1>Welcome {{ new_user.first_name }}!</h1>
-<p>Your account has been successfully created.
-    Now you can <a href="{% url 'login' %}">log in</a>.</p>
+<h1>Добро пожаловать, {{ new_user.first_name }}!</h1>
+<p>Вы успешно зарегистрировались. Теперь вы можете  <a href="{% url 'login' %}">войти</a>.</p>
 {% endblock %}
