--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -1,7 +1,7 @@
 {% extends "base_generic.html" %}
 {% block title %}Edit your account{% endblock %}
 {% block content %}
-<h1>Edit your account</h1>
+<h1>Редактор профиля</h1>
 <p>You can edit your account using the following form:</p>
 <form action="." method="post" enctype="multipart/form-data">
     {{ user_form.as_p }}
