--- a/land/templates/survey/survey_confirm_delete.html
+++ b/land/templates/survey/survey_confirm_delete.html
@@ -4,7 +4,7 @@
 
 <h1>Удалить геологическое исследование</h1>
 
-<p>Будет удалено исследование участка: {{ geologicalsurvey.land }}. Продолжить?</p>
+<p>Будет удалено исследование участка: {{ survey.land }}. Продолжить?</p>
 
 <form action="" method="POST">
   {% csrf_token %}
