--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -41,12 +41,12 @@
 <p>поскольку здесь показываются изыскания, который провел данный юзер-изыскательная организация.</p>
 <p>Изыскания для частного пользователя находятся на странице с деталями его участка</p>
 
-<a href="{% url 'geologicalsurvey_create' %}">Добавить геологическое изыскание</a>
-{% if my_geologicalsurveys_list %}
+<a href="{% url 'survey_create' %}">Добавить геологическое изыскание</a>
+{% if my_surveys_list %}
 <ul>
-    {% for geologicalsurvey in my_geologicalsurveys_list %}
+    {% for survey in my_surveys_list %}
     <li>
-        <a href="{{ geologicalsurvey.get_absolute_url }}"> Для участка: {{ geologicalsurvey.land.cadastral_number }}</a>
+        <a href="{{ survey.get_absolute_url }}"> Для участка: {{ survey.land.cadastral_number }}</a>
     </li>
     {% endfor %}
 </ul>
